# credit-simulator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.idx/: dev.nix
docs/: requirements.md
src/credit_simulator/: __main__.py  calculator.py  cli.py  config.py  fetcher.py  optimizer.py  profiles.py  resolver.py
tests/integration/: test_cli.py
tests/unit/: test_calculator.py  test_optimizer.py  test_resolver.py
